SSC-XX fix cruise header cta btn alignment bis

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
@@ -222,8 +222,4 @@
             opacity: 1;
         }
     }
-
-    .btn.btn-thin {
-        padding: 8px 20px;
-    }
 }
