--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-header.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-header.less
@@ -67,9 +67,13 @@
             vertical-align: top;
             text-align: center;
 
-            .btn i {
-                position: relative;
-                top: 1px;
+            .btn {
+                padding: 8px 20px;
+
+                i {
+                    position: relative;
+                    top: 1px;
+                }
             }
 
             @media screen and (max-width: @screen-sm) {
